tests/parser/invalid/syntax_errors/missing_identifier.src
fn test() {
    int = 5;
    return 0;
}
